# pybhjet

./: .gitignore  CMakeLists.txt  README.md  basic_workflow.ipynb  bhjet_class.cpp  bhjet_interactive.ipynb  bhjet_plotting.py  importing_data.py  jet_output.hh  model_data_load.yaml  pybhjet_3ml.py  pybhjet_setup.sh  setup_define_scripts.py  utils.cpp  venv_setup.sh
PyBHJet/: CMakeLists.txt  README.md  bhjet_class.cpp  bhjet_class.hh  bhjet_interactive.ipynb  bhjet_plotting.py  cmake_helios.txt  conda_setup.yaml  importing_data.py  jetmain.cpp  jetmain.hh  jetpars.cpp  og_pybhjet_3ml.py  pybhjet_3ml.py  python_interface.cpp  unit_conversion.py  venv_setup.sh
PyBHJet/Kariba/: Bknpower.cpp  Bknpower.hpp  Mixed.cpp  Mixed.hpp  Particles.hpp  Powerlaw.cpp  Powerlaw.hpp
PyBHJet/Testing/: 3ml_bhjet_test.ipynb  pybhjet_example.ipynb
PyBHJet/pybhjet_venv/lib/: libblosc2.2.13.1.dylib
PyBHJet/pybhjet_venv/lib/cmake/Blosc2/: Blosc2Targets-release.cmake  Blosc2Targets.cmake
Testing/: pybhjet_example.ipynb  pybind_wrapper_test.ipynb
